# animenu

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.include.in  NEWS  README  TODO  animenu.c  animenu.h  autogen.sh  bootstrap  configure  configure.ac  configure.in  menu.c  menu.h  options.c  options.h  osd.c  osd.h  tokenize.c  tokenize.h
examplemenus/: internet.menu
examples/: animenurc  audio.menu  emulators.menu  graphics.menu  internet.menu  root.menu  sound.menu
src/: Makefile.am  animenu.c  animenu.h  menu.c  menu.h  options.c  options.h  osd.c  osd.h  tokenize.c  tokenize.h
