dnl Process this file with autoconf to produce a configure script.

AC_INIT(animenu.c)
AM_INIT_AUTOMAKE(animenu,0.3.0)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

disable_xft="no"
AC_ARG_ENABLE(xft,
              [  --disable-xft            disable use of xft library for translucency],
              disable_xft="yes")

disable_icons="no"
AC_ARG_ENABLE(icons,
              [  --disable-icons          disable use of xpm library for icons],
              disable_icons="yes")

dnl Checks for libraries

AC_PATH_XTRA
LIBS="$LIBS $X_LIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS -lm -lpthread"

if test x$disable_xft = "xno"
then
  AC_CHECK_LIB(Xft, XftDrawRect,,AC_DEFINE(NOXFT,1))
fi

if test x$disable_icons = "xno"
then
  AC_CHECK_LIB(Xpm, XpmCreatePixmapFromData)
fi

AC_CHECK_LIB(pthread, pthread_create,,AC_MSG_ERROR("Need pthread library!"))
AC_CHECK_LIB(lirc_client, lirc_init,,AC_MSG_ERROR("Need lirc_client library!"))

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(pthread.h fcntl.h malloc.h sys/ioctl.h sys/time.h unistd.h lirc/lirc_client.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
